...
        <LinearLayout
            android:id="@+id/ly_buttons_color_up_ttbsett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_b_green_ttbsett"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
                android:background="@color/colorGreen"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/str_color_b_green_ttb" />

            <Button
                android:id="@+id/btn_b_blue_ttbsett"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
        <LinearLayout
            android:id="@+id/ly_buttons_color_down_ttbsett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_b_red_ttbsett"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:text="@string/str_color_b_red_ttb" />

            <Button
                android:id="@+id/btn_b_magenta_ttbsett"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
        <LinearLayout
            android:id="@+id/ly_screen_color_up_ttbsett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_s_white_ttbsett"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
                android:orientation="horizontal"
                android:padding="30dp"
                android:text="@string/str_color_s_white_ttb"
                android:textColor="@color/colorBlack"/>

            <Button
                android:id="@+id/btn_s_black_ttbsett"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
        <LinearLayout
            android:id="@+id/ly_screen_color_down_ttbsett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_s_grey_ttbsett"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:text="@string/str_color_s_grey_ttb" />

            <Button
                android:id="@+id/btn_s_magenta_ttbsett"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_back_ttbsett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/str_back" />

        <Button
            android:id="@+id/btn_ok_ttbsett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
...
