...
    <string name="str_lose_ttb">You lose!</string>
    <string name="str_play_again_ttb">Play Again?</string>
    <string name="str_btn_color_ttb">Button Color</string>
    <string name="str_screen_color_ttb">Screen Color</string>
    <string name="str_continue_ttb">Continue (-10 p.)</string>

    <string name="str_color_b_green_ttb">Green</string>
    <string name="str_color_b_blue_ttb">Blue</string>
    <string name="str_color_b_red_ttb">Red</string>
    <string name="str_color_b_magenta_ttb">Magenta</string>

    <string name="str_color_s_white_ttb">White</string>
    <string name="str_color_s_black_ttb">Black</string>
    <string name="str_color_s_grey_ttb">Grey</string>
    <string name="str_color_s_magenta_ttb">Magenta</string>

    <string name="str_title_hm">Hangman</string>
    <string name="str_textv_win_hm">You won! Score +1</string>
    <string name="str_textv_lose_hm">You lose!</string>
    <string name="str_hint_hm">Hint</string>
...
