<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ttb_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".TTBActivity">

        <TextView
            android:id="@+id/textv_title_ttb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/str_title_ttb"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_play_ttb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/str_play_ttb"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_settings_ttb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/str_settings"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_back_ttb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/str_back"
            android:textSize="18sp" />
</LinearLayout>